Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8
-
Can result in unexpected behaviour
-
`mariadb-dump -T` did not encode table names like the server did for `frm` files, so some tables can be created in the server, but not dumped with `mariadb-dump -T`, for example, a table `con` on Windows.
-
Q4/2025 Server Maintenance
Description
for example
create database foo; |
use foo; |
create table `foo/bar` (c int) select 3 as c; |
exec $MYSQL_DUMP foo --tab $MYSQLTEST_VARDIR; |
drop database foo; |
this fails with
Can't create/write to file 'foo/bar.sql' (Errcode: 2 "No such file or directory")
|
or, on Windows,
create table `con` (c int) select 3 as c; |
Attachments
Issue Links
- links to