MDEV-37483 mariadb-dump -T doesn't convert table names

use my_charset_filename to build file names from table names.
this guarantees that file name will be always valid for any
table name, no matter what characters it contains and what file name
rules local filesystem has.

mariadb-import now converts back, if possible.